<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">
        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/dark_logo" />

        <TextView
            android:id="@+id/text_main_title"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/image_logo"
            android:layout_marginLeft="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/text_main_title"
            android:textSize="22sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text_main_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/image_logo"
            android:textColor="#FFFFFF"
            android:text="@string/text_main_subtitle"
            android:textSize="25sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_layout"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="@drawable/border_button"
        android:text="@string/login_button"
        />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="@drawable/border_button"
        android:text="@string/signup_button"
        />

    <TextView
        android:id="@+id/socailLinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socialLink"
        android:layout_below="@id/button_signup"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@id/socailLinks"
        >

        <ImageView
            android:id="@+id/fb_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:src="@drawable/fb"
            />


        <ImageView
            android:id="@+id/twitter_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:src="@drawable/twitter"
            />


        <ImageView
            android:id="@+id/youtube_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:src="@drawable/youtube"
            />


        <ImageView
            android:id="@+id/linkedin_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:src="@drawable/linkedin"
            />

    </LinearLayout>

</RelativeLayout>