<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_signup"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/subtitle_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_signup"
        android:layout_below="@id/title_signup"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        />

    <View
        android:id="@+id/view_signup_text"
        android:layout_width="70dp"
        android:layout_centerHorizontal="true"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_marginTop="30dp"
        android:layout_below="@id/subtitle_signup"
        />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view_signup_text"
        android:layout_marginTop="5dp"
        />
    <RelativeLayout
        android:id="@+id/edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_text"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_username"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_user"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/editText_signup_1"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edittext_username" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_pass"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editText_signup_2"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edittext_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_confirm_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_confirm_pass"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editText_signup_3"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edittext_confirm_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_layout"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="@drawable/border_button"
        android:text="@string/signup_button"
        />

    <LinearLayout
        android:id="@+id/view_signup_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_signup"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
        <View
            android:id="@+id/view_left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:id="@+id/text_signup_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signup_options"

            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            />
        <View
            android:id="@+id/view_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@id/view_signup_options"
        >

    <ImageView
        android:id="@+id/fb_signup"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:src="@drawable/fb"
        />


    <ImageView
        android:id="@+id/google_signup"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:src="@drawable/google"
        />
    </LinearLayout>
</RelativeLayout>